--- a/BookshelfServices/BLL.csproj
+++ b/BookshelfServices/BLL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -12,7 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BookshelfModels\BookshelfModels.csproj" />
+    <ProjectReference Include="..\ApiDAL\ApiDAL.csproj" />
+    <ProjectReference Include="..\BookshelfModels\Models.csproj" />
     <ProjectReference Include="..\BookshelfRepos\BookshelfRepos.csproj" />
   </ItemGroup>
 
