refactor: camada dal para chamadas api; rename da camada dal da local db

--- a/BookshelfServices/BLL.csproj
+++ b/BookshelfServices/BLL.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ApiDAL\ApiDAL.csproj" />
     <ProjectReference Include="..\BookshelfModels\Models.csproj" />
-    <ProjectReference Include="..\BookshelfRepos\BookshelfRepos.csproj" />
+    <ProjectReference Include="..\BookshelfRepos\LocalDbDAL.csproj" />
   </ItemGroup>
 
 </Project>
