--- a/ApiDAL/ApiDAL.csproj
+++ b/ApiDAL/ApiDAL.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BookshelfModels\Models.csproj" />
-    <ProjectReference Include="..\BookshelfRepos\BookshelfRepos.csproj" />
+    <ProjectReference Include="..\BookshelfRepos\LocalDbDAL.csproj" />
   </ItemGroup>
 
 </Project>
