refactor: renomeando pastas das camadas do projeto: models.

--- a/BookshelfRepos/LocalDbDAL.csproj
+++ b/BookshelfRepos/LocalDbDAL.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BookshelfModels\Models.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
 </Project>
