--- a/ApiDAL/ApiDAL.csproj
+++ b/ApiDAL/ApiDAL.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BookshelfModels\Models.csproj" />
     <ProjectReference Include="..\BookshelfRepos\LocalDbDAL.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
 </Project>
