--- a/BookshelfServices/BLL.csproj
+++ b/BookshelfServices/BLL.csproj
@@ -13,8 +13,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ApiDAL\ApiDAL.csproj" />
-    <ProjectReference Include="..\BookshelfModels\Models.csproj" />
     <ProjectReference Include="..\BookshelfRepos\LocalDbDAL.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
 </Project>
