--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-/BookShelfServices/ApiKeys.cs
+/ALL/ApiKeys.cs
 
 # User-specific files
 *.rsuser
