feat: wip, criando consumo da api de historico do livro; refactor: alteração de nomes das camadas;

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-/ALL/ApiKeys.cs
+/ApiDAL/ApiKeys.cs
 # User-specific files
 *.rsuser
 *.suo
@@ -362,3 +362,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/ApiDAL/ApiKeys.cs
