--- a/Bookshelf/Bookshelf.csproj
+++ b/Bookshelf/Bookshelf.csproj
@@ -88,10 +88,15 @@
 
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
+	  <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.6" />
+	  <PackageReference Include="SQLitePCLRaw.core" Version="2.1.6" />
+	  <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.6" />
+	  <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.6" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\BLL\BLL.csproj" />
+	  <ProjectReference Include="..\DBContextDAL\DbContextDAL.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
