implementação da side bar #Closes 54

--- a/Bookshelf/Bookshelf.csproj
+++ b/Bookshelf/Bookshelf.csproj
@@ -173,6 +173,9 @@
 		<MauiXaml Update="Components\BorderedEntry.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
+		<MauiXaml Update="Components\FlyoutHeader.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
 		<MauiXaml Update="Components\RatingBar.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</MauiXaml>
