--- a/Bookshelf/Bookshelf.csproj
+++ b/Bookshelf/Bookshelf.csproj
@@ -34,11 +34,13 @@
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-maccatalyst|AnyCPU'">
 	  <ApplicationId>com.Xpem.Bookshelf</ApplicationId>
 	  <ApplicationTitle>XpemBookshelf</ApplicationTitle>
+	  <ApplicationDisplayVersion>0.1</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-ios|AnyCPU'">
 	  <ApplicationId>com.Xpem.Bookshelf</ApplicationId>
 	  <ApplicationTitle>XpemBookshelf</ApplicationTitle>
+	  <ApplicationDisplayVersion>0.1</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-android|AnyCPU'">
@@ -49,16 +51,19 @@
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-windows10.0.19041.0|AnyCPU'">
 	  <ApplicationId>com.Xpem.XpemBookshelf</ApplicationId>
 	  <ApplicationTitle>XpemBookshelf</ApplicationTitle>
+	  <ApplicationDisplayVersion>0.1</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-maccatalyst|AnyCPU'">
 	  <ApplicationId>com.Xpem.Bookshelf</ApplicationId>
 	  <ApplicationTitle>XpemBookshelf</ApplicationTitle>
+	  <ApplicationDisplayVersion>0.1</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-ios|AnyCPU'">
 	  <ApplicationId>com.Xpem.Bookshelf</ApplicationId>
 	  <ApplicationTitle>XpemBookshelf</ApplicationTitle>
+	  <ApplicationDisplayVersion>0.1</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-android|AnyCPU'">
@@ -69,16 +74,19 @@
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-windows10.0.19041.0|AnyCPU'">
 	  <ApplicationId>com.Xpem.XpemBookshelf</ApplicationId>
 	  <ApplicationTitle>XpemBookshelf</ApplicationTitle>
+	  <ApplicationDisplayVersion>0.1</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-android34.0|AnyCPU'">
 	  <ApplicationTitle>XpemBookshelf</ApplicationTitle>
 	  <ApplicationId>com.Xpem.Bookshelf</ApplicationId>
+	  <ApplicationDisplayVersion>0.1</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-android34.0|AnyCPU'">
 	  <ApplicationTitle>XpemBookshelf</ApplicationTitle>
 	  <ApplicationId>com.Xpem.Bookshelf</ApplicationId>
+	  <ApplicationDisplayVersion>0.1</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
